test/files/pos/t5031/package.scala
package object t5031 {
  type ID = Int
}
