test/files/neg/ypredef-custom/minidef_1.scala
package hello.world

object minidef {
  type INT = Int
}
